# StudentMangementSystem

./: CMakeLists.txt  Student.cpp  Student.h  StudentController.cpp  StudentController.h  SubjectController.cpp  SubjectController.h  SubjectData.cpp  SubjectData.h  SubjectDefinition.cpp  SubjectDefinition.h
